# Psypolus

./: .gitignore  README.md  nixpacks.toml
app-backend/: Cargo.toml
app-frontend/: Cargo.toml  index.html  tailwind.config.js
app-shared/: Cargo.toml
app_backend/: Cargo.toml  Dockerfile  Rocket.toml  nixpacks.toml
app_backend/src/: main.rs
app_backend/src/models/: accounts.rs
app_backend/src/routes/: get_user.rs
app_backend/src/templates/: index.html.tera
app_backend/templates/: index.html.tera
app_frontend/: Cargo.toml  index.html  package-lock.json  tailwind.config.js
app_frontend/src/: app.rs
app_frontend/src/components/inc/: mod.rs  navbar.rs  popover.rs  survey_section_bar.rs
app_frontend/src/components/pages/: about.rs  contact.rs  home.rs  mod.rs  not_found.rs
app_frontend/src/components/pages/big_five/: about_big_five.rs  big_five_sections.rs  mod.rs
app_frontend/src/models/: account.rs
app_frontend/styles/: input.css  output.css  test.html
app_shared/: Cargo.toml
app_shared/src/: lib.rs
app_shared/src/models/: mod.rs  tester.rs  user.rs
