[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
